--- a/todo-list/step-03/index.html
+++ b/todo-list/step-03/index.html
@@ -43,6 +43,6 @@
         </div>
       </div>
     </div>
-    <script src="script-state.js"></script>
+    <script src="script-class.js"></script>
   </body>
 </html>
